SUBDIRS = libIris


bin_SCRIPTS = chronopic-firmwarecord


firmwaredatadir = @datadir@/@PACKAGE@/firmware
dist_firmwaredata_DATA = 	ledp.hex			\
				chronopic_firmware_10ms.hex 	\
				chronopic_firmware_50ms.hex	\
				chronopic_firmware_100ms.hex	\
				chronopic-firmware-multitest.hex

CLEANFILES = $(bin_SCRIPTS)
