themedir = @datadir@/@PACKAGE@/theme
nobase_dist_theme_DATA = Makefile.am \
	gtk-2.0/Arrows/arrow-down-insens.png \
	gtk-2.0/Arrows/arrow-down-prelight.png \
	gtk-2.0/Arrows/arrow-down-small-insens.png \
	gtk-2.0/Arrows/arrow-down-small-prelight.png \
	gtk-2.0/Arrows/arrow-down-small.png \
	gtk-2.0/Arrows/arrow-down.png \
	gtk-2.0/Arrows/arrow-left-insens.png \
	gtk-2.0/Arrows/arrow-left-prelight.png \
	gtk-2.0/Arrows/arrow-left.png \
	gtk-2.0/Arrows/arrow-right-insens.png \
	gtk-2.0/Arrows/arrow-right-prelight.png \
	gtk-2.0/Arrows/arrow-right.png \
	gtk-2.0/Arrows/arrow-up-insens.png \
	gtk-2.0/Arrows/arrow-up-prelight.png \
	gtk-2.0/Arrows/arrow-up-small-insens.png \
	gtk-2.0/Arrows/arrow-up-small-prelight.png \
	gtk-2.0/Arrows/arrow-up-small.png \
	gtk-2.0/Arrows/arrow-up.png \
	gtk-2.0/Arrows/menu-arrow-prelight.png \
	gtk-2.0/Arrows/menu-arrow.png \
	gtk-2.0/Buttons/button-default-nohilight.png \
	gtk-2.0/Buttons/button-default.png \
	gtk-2.0/Buttons/button-insensitive-nohilight.png \
	gtk-2.0/Buttons/button-insensitive.png \
	gtk-2.0/Buttons/button-prelight-nohilight.png \
	gtk-2.0/Buttons/button-prelight.png \
	gtk-2.0/Buttons/button-pressed-nohilight.png \
	gtk-2.0/Buttons/button-pressed.png \
	gtk-2.0/Check-Radio/checkbox-checked-insensitive.png \
	gtk-2.0/Check-Radio/checkbox-checked.png \
	gtk-2.0/Check-Radio/checkbox-unchecked-insensitive.png \
	gtk-2.0/Check-Radio/checkbox-unchecked.png \
	gtk-2.0/Check-Radio/menucheck.png \
	gtk-2.0/Check-Radio/menucheck_prelight.png \
	gtk-2.0/Check-Radio/menuoption.png \
	gtk-2.0/Check-Radio/menuoption_prelight.png \
	gtk-2.0/Check-Radio/option-checked-insensitive.png \
	gtk-2.0/Check-Radio/option-checked.png \
	gtk-2.0/Check-Radio/option-unchecked-insensitive.png \
	gtk-2.0/Check-Radio/option-unchecked.png \
	gtk-2.0/Entry/combo-entry-border-active-bg.png \
	gtk-2.0/Entry/combo-entry-border-active-notebook.png \
	gtk-2.0/Entry/combo-entry-border-active-rtl-bg.png \
	gtk-2.0/Entry/combo-entry-border-active-rtl-notebook.png \
	gtk-2.0/Entry/combo-entry-border-bg.png \
	gtk-2.0/Entry/combo-entry-border-disabled-bg.png \
	gtk-2.0/Entry/combo-entry-border-disabled-notebook.png \
	gtk-2.0/Entry/combo-entry-border-disabled-rtl-bg.png \
	gtk-2.0/Entry/combo-entry-border-disabled-rtl-notebook.png \
	gtk-2.0/Entry/combo-entry-border-notebook.png \
	gtk-2.0/Entry/combo-entry-border-rtl-bg.png \
	gtk-2.0/Entry/combo-entry-border-rtl-notebook.png \
	gtk-2.0/Entry/combo-entry-button-active-rtl.png \
	gtk-2.0/Entry/combo-entry-button-active.png \
	gtk-2.0/Entry/combo-entry-button-disabled-rtl.png \
	gtk-2.0/Entry/combo-entry-button-disabled.png \
	gtk-2.0/Entry/combo-entry-button-rtl.png \
	gtk-2.0/Entry/combo-entry-button.png \
	gtk-2.0/Entry/entry-border-active-bg-solid-spin.png \
	gtk-2.0/Entry/entry-border-active-bg-solid.png \
	gtk-2.0/Entry/entry-border-active-bg.png \
	gtk-2.0/Entry/entry-border-active-notebook.png \
	gtk-2.0/Entry/entry-border-bg-solid-spin.png \
	gtk-2.0/Entry/entry-border-bg-solid.png \
	gtk-2.0/Entry/entry-border-bg.png \
	gtk-2.0/Entry/entry-border-disabled-bg.png \
	gtk-2.0/Entry/entry-border-disabled-notebook.png \
	gtk-2.0/Entry/entry-border-fill-plain.png \
	gtk-2.0/Entry/entry-border-fill-solid.png \
	gtk-2.0/Entry/entry-border-fill.png \
	gtk-2.0/Entry/entry-border-notebook.png \
	gtk-2.0/Entry/notebook-entry-border-active-bg.png \
	gtk-2.0/Entry/notebook-entry-border-bg.png \
	gtk-2.0/Entry/notebook-entry-border-disabled-bg.png \
	gtk-2.0/Expanders/minus.png \
	gtk-2.0/Expanders/plus.png \
	gtk-2.0/Handles/handle-h.png \
	gtk-2.0/Handles/handle-v.png \
	gtk-2.0/Lines/line-h.png \
	gtk-2.0/Lines/line-v.png \
	gtk-2.0/Lines/menu_line_h.png \
	gtk-2.0/Menu-Menubar/menubar.png \
	gtk-2.0/Menu-Menubar/menubar_button.png \
	gtk-2.0/Others/focus.png \
	gtk-2.0/Others/null.png \
	gtk-2.0/Others/tree_header.png \
	gtk-2.0/ProgressBar/progressbar.png \
	gtk-2.0/ProgressBar/progressbar_v.png \
	gtk-2.0/ProgressBar/trough-progressbar.png \
	gtk-2.0/ProgressBar/trough-progressbar_v.png \
	gtk-2.0/Range/slider-horiz-prelight.png \
	gtk-2.0/Range/slider-horiz.png \
	gtk-2.0/Range/slider-vert-prelight.png \
	gtk-2.0/Range/slider-vert.png \
	gtk-2.0/Range/trough-horizontal.png \
	gtk-2.0/Range/trough-vertical.png \
	gtk-2.0/Scrollbars/slider-horiz-active.png \
	gtk-2.0/Scrollbars/slider-horiz-insens.png \
	gtk-2.0/Scrollbars/slider-horiz-prelight.png \
	gtk-2.0/Scrollbars/slider-horiz.png \
	gtk-2.0/Scrollbars/slider-vert-active.png \
	gtk-2.0/Scrollbars/slider-vert-insens.png \
	gtk-2.0/Scrollbars/slider-vert-prelight.png \
	gtk-2.0/Scrollbars/slider-vert.png \
	gtk-2.0/Scrollbars/trough-scrollbar-horiz.png \
	gtk-2.0/Scrollbars/trough-scrollbar-vert.png \
	gtk-2.0/Shadows/frame-gap-end.png \
	gtk-2.0/Shadows/frame-gap-start.png \
	gtk-2.0/Shadows/frame.png \
	gtk-2.0/Spin/down-background-disable-rtl.png \
	gtk-2.0/Spin/down-background-disable.png \
	gtk-2.0/Spin/down-background-rtl.png \
	gtk-2.0/Spin/down-background.png \
	gtk-2.0/Spin/up-background-disable-rtl.png \
	gtk-2.0/Spin/up-background-disable.png \
	gtk-2.0/Spin/up-background-rtl.png \
	gtk-2.0/Spin/up-background.png \
	gtk-2.0/Tabs/notebook-gap-horiz.png \
	gtk-2.0/Tabs/notebook-gap-vert.png \
	gtk-2.0/Tabs/notebook.png \
	gtk-2.0/Tabs/tab-bottom-active.png \
	gtk-2.0/Tabs/tab-bottom.png \
	gtk-2.0/Tabs/tab-left-active.png \
	gtk-2.0/Tabs/tab-left.png \
	gtk-2.0/Tabs/tab-right-active.png \
	gtk-2.0/Tabs/tab-right.png \
	gtk-2.0/Tabs/tab-top-active.png \
	gtk-2.0/Tabs/tab-top.png \
	gtk-2.0/Toolbar/inline-toolbar.png \
	gtk-2.0/gtkrc \
	index.theme
