ASSEMBLY = RDotNet
TARGET = library

LINK = $(REF_DEP_RDOTNET)

SOURCES = \
    Closure.cs \
    ComplexVector.cs \
    CharacterMatrix.cs \
    ComplexMatrix.cs \
    BuiltinFunction.cs \
    Devices/CharacterDeviceAdapter.cs \
    Devices/ConsoleDevice.cs \
    Devices/NullCharacterDevice.cs \
    Devices/ICharacterDevice.cs \
    Internals/Delegates.cs \
    Internals/OutputMode.cs \
    Internals/Unix/RStart.cs \
    Internals/ConsoleOutputType.cs \
    Internals/BusyType.cs \
    Internals/SaveActions.cs \
    Internals/Unix/Delegates.cs \
    Internals/Windows/Delegates.cs \
    Internals/Windows/RStart.cs \
    Internals/Windows/UiMode.cs \
    Internals/YesNoCancel.cs \
    SpecialFunction.cs \
    Environment.cs \
    Expression.cs \
    ExpressionVector.cs \
    DataFrame.cs \
    DataFrameRow.cs \
    DynamicVector.cs \
    Dynamic/DataFrameDynamicMeta.cs \
    Dynamic/SymbolicExpressionDynamicMeta.cs \
    Dynamic/ListDynamicMeta.cs \
    Function.cs \
    GenericVector.cs \
    Language.cs \
    LogicalMatrix.cs \
    Pairlist.cs \
    RawMatrix.cs \
    NumericMatrix.cs \
    IntegerMatrix.cs \
    Matrix.cs \
    InternalString.cs \
    Internals/SEXPREC_HEADER.cs \
    RawVector.cs \
    Internals/ParseStatus.cs \
    NumericVector.cs \
    IntegerVector.cs \
    Internals/VECTOR_SEXPREC.cs \
    ParseException.cs \
    ProtectedPointer.cs \
    REngineExtension.cs \
    StartupParameter.cs \
    Symbol.cs \
    SymbolicExpression.cs \
    Internals/SEXPREC.cs \
    Internals/SymbolicExpressionType.cs \
    Internals/sxpinfo.cs \
    Properties/AssemblyInfo.cs \
    REngine.cs \
    SymbolicExpressionExtension.cs \
    Utility.cs \
    Vector.cs \
    LogicalVector.cs \
    CharacterVector.cs


include $(top_srcdir)/build/build.mk
